html/app/styles/core/extra-small.less
/*-- #shifter-part --*/
#shifter-part{
    .block-shifter {
        height: auto !important;
    } 
}
/*-- end: #shifter-part --*/

/*-- .navbar --*/
.main-nav{
    &.minimize .navbar .navbar-header .navbar-brand{
        padding-top: 16px;
        padding-bottom: 16px;
        height: 60px;
    }
    .navbar{
        .container-fluid{
            position: relative;
            .navbar-header{
                position: relative;
                z-index: 2;
                margin-left: -20px;
                margin-right: -20px;
                padding-left: 10px;
                padding-right: 10px;
                background-color: white;
                box-shadow: 0 0 3px rgba(0,0,0,0.6);
                .navbar-brand{
                    padding-top: 16px;
                    padding-bottom: 16px;
                    height: 60px;
                }
                button{
                    margin-top: 11px;
                    margin-bottom: 11px;
                    border: none;
                    background-color: white;
                    margin-right: 0;
                    &:hover,&:active,&:focus{
                        background: white;
                        .icon-bar{
                            background: @bleu;
                        }
                    }
                    /*&.collapsed{
                    background: white;
                    .icon-bar{
                    background: @bleu;
                }
                }*/
                    .icon-bar{
                        width: 25px;
                        height: 4px;
                        border-radius: 4kpx;
                        background: @bleu;
                        margin-top: 3px;
                    }
                    .sr-only+.icon-bar{
                        margin-top: 0;
                    }
                }
            }     
            #navbar{
                background: white;
                z-index: 1;
                bottom: 0;
                display: block;
                height: auto !important;
                position: fixed;
                top: 0;
                padding-top: 80px;
                left: 25%;
                right: 0;
                transition: transform 300ms ease-out;
                transform: translateX(100%);
                &.bleu{
                    background-color: @bleu;
                    ul li{
                        &.active{
                            a{
                                color: @rose;
                            }
                        }
                        a{
                            color: white;
                        }
                    }
                }
                &.rose{
                    background-color: @rose;
                    ul li{
                        &.active{
                            a{
                                color: white;
                            }
                        }
                        a{
                            color: @bleu;
                        }
                    }
                }
                &.collasping,
                &.in{
                    transform: translateX(0%);
                }
                ul{
                    padding-top: 0;
                    li{
                        margin-bottom: 0;
                        margin-top: 0;
                        /*&.active a{
                        background: @rose;
                    }*/
                        &.active a{
                            font-family: @wesfy_bold;
                            background-color: transparent;
                        }
                        a{
                            //                        background-color: @bleu;
                            display: block;
                            text-align: center;
                            text-decoration: none;
                            padding-top: 15px;
                            padding-bottom: 15px;
                            border-radius: 5px;
                            font-size: 17px;
                            font-family: @wesfy_medium;
                            font-weight: normal;
                            &:after{
                                display: none;
                            }
                            &:hover{
                                background-color: transparent;
                            }
                        }
                    }
                }
            }
        } 
    }
}
/*-- end: .navbar --*/

/*-- #block-top --*/
#block-top {
    .to-next-btn{
        transform: scale(0.75);
    }
    .slider-top{
        .item-top .content-box{
            .content-box-type-one {
                //margin-top: 60px;
                h1, h2{
                    font-size: 40px;
                }
                p{
                    font-size: 20px;
                }
            }
        }
    }
}
/*-- end: #block-top --*/

.bottom-link a{
    font-size: 15px;
    &:after{
        vertical-align: middle;
        display: inline-block;
        margin-top: -3px;
    }
}

/*-- #slidervideo --*/
#slidervideo{
    .items .content{
        h3{
            margin-bottom: 10px;
        }
        p{
            font-size: 16px;
            line-height: 100%;
        }
    }
}
/*-- end: #slidervideo --*/


/*-- #citation --*/
#citation{
    padding-bottom: 30px;
    padding-top: 20px;
    .titre h2{
        font-size: 26px;
    }

    &.slider{
        .contenu{
            padding-top: 15px;
            &:before{
                .sprite(@quotation-blue-left-mini);
            }
            p{
                font-size: 15px;
                line-height: 130%;
                &:after{
                    .sprite(@quotation-blue-right-mini);
                }
            }
        }
    }

    .contenu{
        padding-top: 15px;
        &:before{
            .sprite(@quote-white-left)
        }
        p{
            font-size: 15px;
            line-height: 130%;
            &:after{
                .sprite(@quote-white-right)
            }
        }
    }

    .auteur{
        font-size: 18px;
    }
}
/*-- end: #citation --*/

/*-- #contact-part --*/
#contact-part .contact-wrapper .mail-contact{
    font-size: 22px;
}
/*-- end: #contact-part --*/

/*-- #bussiness-case --*/
#bussiness-case{
    .titre h2{
        font-size: 22px;
    }

    .slider-bc .item{
        h3{
            font-size: 17px;
            font-family: @wesfy_bold;
        }

        p{
            line-height: 130%;
            height: 2.6em;
            overflow: hidden;
        }
    }
}
/*-- end: #bussiness-case --*/

/*-- #expertise-part --*/
#expertise-part{
    .titre-part h2{
        //#font-size: 22px;
    }

    .row-expertise{
        padding: 35px 0 15px;
    }

    .block-expertise{
        padding: 30px 0;
    }
}
/*-- end: #expertise-part --*/

/*-- #shifter-part --*/
#shifter-part.sect-wrap{
    .slider-schifter{
        padding: 35px 0 15px;    
    }

    .titre-part a{
        //#font-size: 22px;
    }
}
/*-- end: #shifter-part --*/

/*-- #last-actu --*/
#last-actu .actu-wrapper .actu-bloc .text-actu{
    &>a{
        font-size: 18px;
    }
    .link-more a{
        font-size: 15px;
    }
}
/*-- end: #last-actu --*/

/*-- .twitter-block  --*/
.twitter-block .link-more a{
    font-size: 15px;
}
/*-- end: .twitter-block  --*/

/*-- actucontent --*/
#actucontent .row.actu_title .leftCol nav{
    margin-bottom: 50px;
}
/*-- end: #actucontent --*/

/*-- #bounce --*/
#bounce{
    padding: 30px 8.333% 20px;
}
/*-- end: #bounce --*/

/*-- #associes --*/
#associes .table-assoc .mid-part{
    float: none;
    padding: 0 10px;
    width: 100%;
    clear: both;
    margin-bottom: 30px;
}
/*-- end: #associes --*/


/*-- #joins_us --*/
#joins_us .bloc-join p{
    font-size: 26px;
}
/*-- end: #joins_us --*/


#processus .processus-wrapper .the-bl .block{

    padding: 10px;
    padding-right: 30px;
    &::after{
        right: 10px;
    }
}

